--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "azimdahl.github.io",
+  "homepage": "https://azimdahl.github.io",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -13,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router": "^7.5.2",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
