--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "azimdahl.github.io",
   "homepage": "https://azimdahl.github.io",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
