--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "azimdahl.github.io",
-  "homepage": "https://azimdahl.github.io",
+  "homepage": "https://azimdahl.github.io/azimdahl.github.io",
   "private": false,
   "version": "0.0.0",
   "type": "module",
